...
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/loginFragment">

    <fragment android:id="@+id/noteFragment"
        android:name="com.example.textedd.presentation.frags.NoteFragment"
        tools:layout="@layout/fragment_note">
        <action
            android:id="@+id/action_noteFragment_to_catalogFragment2"
            app:destination="@id/catalogFragment" />
        <action
            android:id="@+id/action_noteFragment_self"
            app:destination="@id/noteFragment" />
        <action
            android:id="@+id/action_noteFragment_to_tag_frag"
            app:destination="@id/tag_frag" />
    </fragment>
    <fragment
        android:id="@+id/catalogFragment"
        android:name="com.example.textedd.presentation.frags.CatalogFragment"
        android:label="@string/createdNotes" >
        <action
...
